tests/NormalTests/paczka1/small_fuzzy/43876151.err
Error in line 6: p1GizO2w S952 50,2
Error in line 8: Wut S952 90,9
Error in line 12: A139 A139 50,3
